# tableTopVaultServer

./: .gitignore  CMakeLists.txt  commands.txt  requests.conf  server.cpp  start.sh  todo  tsconfig.dashboard.json  tsconfig.dashboard.tsbuildinfo  tsconfig.json  tsconfig.loginpage.json  tsconfig.loginpage.tsbuildinfo  vault.conf  vault.cpp  vault_requests.cpp
nginx/: nginx.conf  nginx.conf.template
public/: index.html
public/css/: index.css
src/dashboard/: dashboard.ts  index.ts
src/dashboard/public/: dashboard.html
src/dashboard/public/css/: index.css
src/dashboard/src/: dashboard.ts
src/loginPage/: index.ts  login.ts
src/loginPage/public/: login.html
src/loginPage/public/css/: index.css
src/loginPage/src/: login.ts
src/public/css/: share.css
src/server/: hashedSecureString.h  nginx.cpp  nginx.h  routes.cpp  routes.h  sanitize.cpp  sanitize.h  schema.cpp  schema.h  secureJson.h  secureString.h  serverUtils.cpp  serverUtils.h  share.h  sockets.cpp  sockets.h  vaultClient.cpp  vaultClient.h
tls/: table-top-vault-server-dhparam.pem  table-top-vault-server-key.pem  table-top-vault-server.pem
vault/policies/: admin-vault-server-access.hcl  vault-server-access.hcl
